Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/037_samedecl.xi
f(x:int):bool

f(x:int):bool

//@PRACOWNIA
//@should_not_typecheck
